// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a label 1`] = `
<button
  className="button button--default"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      >
        OK
      </div>
    </div>
  </div>
</button>
`;

exports[`Button renders a button without a label 1`] = `
<button
  className="button button--default"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;

exports[`Button renders a danger button 1`] = `
<button
  className="button button--danger"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;

exports[`Button renders a default button 1`] = `
<button
  className="button button--default"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;

exports[`Button renders a primary button 1`] = `
<button
  className="button button--primary"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;

exports[`Button renders a success button 1`] = `
<button
  className="button button--success"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;

exports[`Button renders a warning button 1`] = `
<button
  className="button button--warning"
>
  <div
    className="css-1trk9rv"
  >
    <div
      className="button-container"
    >
      <div
        className="loading button-loadingindicator"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        className="text s semibold button-label"
      />
    </div>
  </div>
</button>
`;
